--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,15 @@
   margin: 0;
   padding: 0;
 }
+
+.pad {
+  width: 600px;
+  height: 600px;
+  border: 1px solid black;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.cell {
+  border: 1px solid black;
+}
