--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap");
+
 *,
 *::before,
 *::after {
@@ -6,14 +8,46 @@
   padding: 0;
 }
 
+body {
+  background-color: #f9f9fb;
+  font-family: "Saira", sans-serif;
+}
+
+.wrapper {
+  min-width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .pad {
   width: 600px;
   height: 600px;
   border: 1px solid black;
   display: flex;
   flex-wrap: wrap;
+  margin-top: 20px;
 }
 
 .cell {
   border: 1px solid black;
+}
+
+.control-panel {
+  margin-top: 20px;
+}
+
+.button {
+  font-family: "Saira", sans-serif;
+  background-color: #f9f9fb;
+  border: 1px solid black;
+  padding: 10px 15px;
+  font-size: 16px;
+}
+
+.button:hover {
+  background-color: #e9e9e9;
+  cursor: pointer;
 }
