--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ body {
 
 .control-panel {
   margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 30px;
 }
 
 .button {
@@ -50,4 +54,8 @@ body {
 .button:hover {
   background-color: #e9e9e9;
   cursor: pointer;
+}
+
+.color-checkbox {
+  margin: 0 10px;
 }
